--- a/sass/04.components/_form.scss
+++ b/sass/04.components/_form.scss
@@ -3,10 +3,13 @@
 	margin-left: 2px;
 	margin-bottom: 0px;
 	display: none;
+	text-align: left;
 }
 
 .formulario__input-error-activo{
 	display: block;
+	text-align: left;
+	
 }
 
 .c-header{
