--- a/style-2.0.css
+++ b/style-2.0.css
@@ -147,10 +147,12 @@ p {
   margin-left: 2px;
   margin-bottom: 0px;
   display: none;
+  text-align: left;
 }
 
 .formulario__input-error-activo {
   display: block;
+  text-align: left;
 }
 
 .c-header .c-header__flex .c-formulario form {
@@ -389,7 +391,7 @@ p {
   height: 48px;
   color: #FFF;
   text-align: center;
-  font-family: "Montserrat";
+  font-family: Mont;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -428,16 +430,8 @@ p {
   scroll-behavior: smooth;
 }
 
-font-face {
-  font-family: "Montserrat", sans-serif;
-  src: url("/settings/Montserrat-Bold.ttf") format("truetype");
-  src: url("/settings/Montserrat-Bold.ttf") format("truetype");
-  src: url("/settings/Montserrat-SemiBold.ttf") format("truetype");
-  src: url("/settings/Montserrat-Thin.ttf") format("truetype");
-}
-
 body {
-  font-family: "Mont" !important;
+  font-family: Mont !important;
 }
 
 /*Evitamos problemas con las imagenes*/
@@ -530,7 +524,7 @@ font-face {
 }
 
 .nav-item a {
-  font-family: "Montserrat";
+  font-family: "Mont";
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -569,6 +563,8 @@ font-face {
 
 .formulario__input-error-activo {
   display: block;
+  text-align: left;
+  color: var(--bs-danger);
 }
 
 .c-header .c-header__flex .c-formulario form {
@@ -621,7 +617,7 @@ font-face {
 .c-main .c-main__beneficios p {
   color: #5C5776;
   text-align: center;
-  font-family: "Montserrat";
+  font-family: Mont;
   font-size: 20;
   font-style: normal;
   font-weight: 700;
@@ -648,7 +644,7 @@ font-face {
 .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
   text-align: left;
   color: #5C5776;
-  font-family: "Montserrat";
+  font-family: Mont;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -676,7 +672,7 @@ font-face {
 
 .c-main .c-main__clinicas .accordion-header button {
   color: #6B6B6B;
-  font-family: "Montserrat";
+  font-family: Mont;
   font-size: 20px;
   font-style: normal;
   font-weight: 900;
@@ -723,7 +719,7 @@ font-face {
 .o-text-h1 {
   color: #FFF;
   text-align: center;
-  font-family: "Montserrat";
+  font-family: Mont;
   font-size: 48px;
   font-style: normal;
   font-weight: 900;
@@ -734,7 +730,7 @@ font-face {
 .o-text-h2 {
   color: #FFF;
   text-align: center;
-  font-family: "Montserrat";
+  font-family: Mont;
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
@@ -745,7 +741,7 @@ font-face {
   .o-text-h1 {
     color: #FFF;
     text-align: center;
-    font-family: "Montserrat";
+    font-family: Mont;
     font-size: 56px;
     font-style: normal;
     font-weight: 900;
@@ -1910,7 +1906,7 @@ progress {
   width: 100%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.5;
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
