--- a/sass/05.objects/objects.scss
+++ b/sass/05.objects/objects.scss
@@ -15,7 +15,7 @@
     height: 48px;
     color: #FFF;
     text-align: center;
-    font-family: "Montserrat";
+    font-family: Mont;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
