--- a/sass/01.settings/_variables.scss
+++ b/sass/01.settings/_variables.scss
@@ -4,6 +4,7 @@
 $color-white: #FFFFFF;
 $color-blue-light:#5c5776;
 $color-blue: #13005A;
+$color--violet: #aa1654;
 
 
 //Tamaños de fuentes MOBILE
