--- a/sass/04.components/_nav.scss
+++ b/sass/04.components/_nav.scss
@@ -46,9 +46,9 @@
 
     .nav-item a{
         font-weight: 500;
-        color: rgba(20, 0, 90, 0.644);
+        
         &:hover{
-            color: $color-blue;
+            color: blanchedalmond;
         }
         
     }
