--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ p {
 }
 
 .c-header {
+  background-color: rgb(190, 5, 190);
   background-image: url("img/backgreen.png");
   background-repeat: no-repeat;
   background-size: cover;
