--- a/sass/04.components/_form.scss
+++ b/sass/04.components/_form.scss
@@ -10,6 +10,7 @@
 	display: block;
 	text-align: left;
 	
+	
 }
 
 .c-header{
@@ -18,7 +19,7 @@
 			form{
 				padding: 40px;
 				border-radius: 10px;
-				background-color: $color-white;
+				background-color: red;
 				.afiliadoConsulta{
 					margin-bottom: 16px;
 				}
