--- a/sass/05.objects/objects.scss
+++ b/sass/05.objects/objects.scss
@@ -9,8 +9,8 @@
 }
 #btn-id{
     border-radius: 4px;
-    border: 1px solid #7B3092;
-    background: #13005A;
+    
+    background: #ff5b19;
     width: 100%;
     height: 48px;
     color: #FFF;
@@ -18,7 +18,7 @@
     font-family: Mont;
     font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 22.4px; /* 93.333% */
 }
 @media (min-width: $breakpoint-nav-large) {
