--- a/style-2.0.css
+++ b/style-2.0.css
@@ -66,8 +66,21 @@ p {
   line-height: normal;
 }
 
+#loader-wrapper {
+  background-color: var(--white);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999999;
+}
+#loader-wrapper img {
+  width: 100px;
+}
+
 .c-header {
-  background-image: url("img/backgreen.png");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 0px 16px 40px 16px;
@@ -80,7 +93,6 @@ p {
 
 @media (min-width: 1000px) {
   .c-header {
-    background-image: url("img/gradient-green.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0px 30px 0px 30px;
@@ -136,10 +148,9 @@ p {
   }
   .nav-item a {
     font-weight: 500;
-    color: rgba(20, 0, 90, 0.644);
   }
   .nav-item a:hover {
-    color: #13005A;
+    color: blanchedalmond;
   }
 }
 .formulario__input-error {
@@ -158,7 +169,7 @@ p {
 .c-header .c-header__flex .c-formulario form {
   padding: 40px;
   border-radius: 10px;
-  background-color: #FFFFFF;
+  background-color: red;
 }
 .c-header .c-header__flex .c-formulario form .afiliadoConsulta {
   margin-bottom: 16px;
@@ -385,8 +396,7 @@ p {
 
 #btn-id {
   border-radius: 4px;
-  border: 1px solid #7B3092;
-  background: #13005A;
+  background: #ff5b19;
   width: 100%;
   height: 48px;
   color: #FFF;
@@ -394,7 +404,7 @@ p {
   font-family: Mont;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 22.4px; /* 93.333% */
 }
 
@@ -461,24 +471,32 @@ span {
   font-weight: 600 !important;
 }
 
+input::placeholder {
+  color: var(--bs-dark-border-subtle) !important;
+}
+
+textarea::placeholder {
+  color: var(--bs-dark-border-subtle) !important;
+}
+
 font-face {
   font-family: "Mont";
-  src: url("../settings/Mont-Black.ttf") format("truetype");
-  src: url("../settings/Mont-Bold.ttf") format("truetype");
-  src: url("../settings/Mont-Heavy.ttf") format("truetype");
-  src: url("../settings/Mont-SemiBold.ttf") format("truetype");
+  src: url("../font/Mont-Black.ttf") format("truetype");
+  src: url("../font/Mont-Bold.ttf") format("truetype");
+  src: url("../font/Mont-Heavy.ttf") format("truetype");
+  src: url("../font/Mont-SemiBold.ttf") format("truetype");
 }
 
 font-face {
   font-family: "Montserrat", sans-serif;
-  src: url("../settings/Montserrat-Bold.ttf") format("truetype");
-  src: url("../settings/Montserrat-Bold.ttf") format("truetype");
-  src: url("../settings/Montserrat-SemiBold.ttf") format("truetype");
-  src: url("../settings/Montserrat-Thin.ttf") format("truetype");
+  src: url("../font/Montserrat-Bold.ttf") format("truetype");
+  src: url("../font/Montserrat-ExtraBold.ttf") format("truetype");
+  src: url("../font/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("../font/Montserrat-Thin.ttf") format("truetype");
 }
 
 .c-header {
-  background-image: url("img/backgreen.png");
+  background-image: url("img/ba.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 0px 16px 40px 16px;
@@ -492,7 +510,7 @@ font-face {
 
 @media (min-width: 1000px) {
   .c-header {
-    background-image: url("img/gradient-green.png");
+    background-image: url("img/ba.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0px 30px 0px 30px;
@@ -548,10 +566,6 @@ font-face {
   }
   .nav-item a {
     font-weight: 500;
-    color: rgba(20, 0, 90, 0.644);
-  }
-  .nav-item a:hover {
-    color: #13005A;
   }
 }
 .formulario__input-error {
@@ -571,6 +585,9 @@ font-face {
   padding: 40px;
   border-radius: 10px;
   background-color: #FFFFFF;
+  position: relative;
+  z-index: 1;
+  top: 0;
 }
 
 .c-header .c-header__flex .c-formulario form .afiliadoConsulta {
@@ -578,12 +595,15 @@ font-face {
 }
 
 .c-header .c-header__flex .c-formulario form .form-group .label-input-container {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 @media (min-width: 1000px) {
   .c-header .c-header__flex .c-formulario {
     width: 360px;
+  }
+  .c-header .c-header__flex .c-formulario form {
+    top: -40px;
   }
 }
 @media (min-width: 1200px) {
@@ -604,7 +624,7 @@ font-face {
 }
 
 .c-main .c-main__beneficios h1 {
-  color: #8C989C;
+  color: #aa1654;
   text-align: center;
   font-family: Mont;
   font-size: 40;
@@ -660,7 +680,7 @@ font-face {
 }
 
 .c-main .c-main__clinicas h1 {
-  color: #8C989C;
+  color: #aa1654;
   text-align: center;
   font-family: Mont;
   font-size: 40;
