--- a/style.css
+++ b/style.css
@@ -42,18 +42,18 @@ span {
 
 font-face {
   font-family: "Mont";
-  src: url("../settings/Mont-Black.ttf") format("truetype");
-  src: url("../settings/Mont-Bold.ttf") format("truetype");
-  src: url("../settings/Mont-Heavy.ttf") format("truetype");
-  src: url("../settings/Mont-SemiBold.ttf") format("truetype");
+  src: url("../font/Mont-Black.ttf") format("truetype");
+  src: url("../font/Mont-Bold.ttf") format("truetype");
+  src: url("../font/Mont-Heavy.ttf") format("truetype");
+  src: url("../font/Mont-SemiBold.ttf") format("truetype");
 }
 
 font-face {
   font-family: "Montserrat", sans-serif;
-  src: url("../settings/Montserrat-Bold.ttf") format("truetype");
-  src: url("../settings/Montserrat-Bold.ttf") format("truetype");
-  src: url("../settings/Montserrat-SemiBold.ttf") format("truetype");
-  src: url("../settings/Montserrat-Thin.ttf") format("truetype");
+  src: url("../font/Montserrat-Bold.ttf") format("truetype");
+  src: url("../font/Montserrat-ExtraBold.ttf") format("truetype");
+  src: url("../font/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("../font/Montserrat-Thin.ttf") format("truetype");
 }
 
 p {
