font conf and form top position

--- a/sass/01.settings/_reset.scss
+++ b/sass/01.settings/_reset.scss
@@ -9,7 +9,8 @@
 }
 
 body{
-  font-family: Mont!important;
+  font-family: "Urbanist", serif;
+  font-optical-sizing: auto;
 }
 
 /*Evitamos problemas con las imagenes*/
