--- a/sass/03.elements/font-styles.scss
+++ b/sass/03.elements/font-styles.scss
@@ -1,7 +1,8 @@
 p{
     color: #5C5776;
     text-align: center;
-    font-family: Mont;
+    font-family: "Urbanist", serif;
+    font-optical-sizing: auto;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
