--- a/sass/main.scss
+++ b/sass/main.scss
@@ -55,21 +55,6 @@ textarea::placeholder{
   color: var(--bs-dark-border-subtle)!important;
 }
 
-font-face {
-  font-family: "Mont";
-  src: url("../font/Mont-Black.ttf") format("truetype");
-  src: url("../font/Mont-Bold.ttf") format("truetype");
-  src: url("../font/Mont-Heavy.ttf") format("truetype");
-  src: url("../font/Mont-SemiBold.ttf") format("truetype");
-}
-
-font-face {
-  font-family: "Montserrat", sans-serif;
-  src: url("../font/Montserrat-Bold.ttf") format("truetype");
-  src: url("../font/Montserrat-ExtraBold.ttf") format("truetype");
-  src: url("../font/Montserrat-SemiBold.ttf") format("truetype");
-  src: url("../font/Montserrat-Thin.ttf") format("truetype");
-}
 
 .c-header {
   background-image: url("img/ba.jpg");
@@ -85,6 +70,8 @@ font-face {
 }
 
 @media (min-width: 1000px) {
+
+
   .c-header {
     background-image: url("img/ba.jpg");
     background-repeat: no-repeat;
@@ -162,6 +149,8 @@ font-face {
   
 }
 
+
+
 .c-header .c-header__flex .c-formulario form {
   padding: 40px;
   border-radius: 10px;
@@ -169,6 +158,7 @@ font-face {
   position: relative;
   z-index: 1;
   top: 0;
+  transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .c-header .c-header__flex .c-formulario form .afiliadoConsulta {
@@ -180,10 +170,17 @@ font-face {
 }
 
 @media (min-width: 1000px) {
+  .translateToTop {
+    transform: translateY(-100px);
+    transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  
   .c-header .c-header__flex .c-formulario {
     width: 360px;
     form{
-         top: -40px;
+        top: 57px;
+        transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
   }
 }
@@ -322,8 +319,8 @@ font-face {
 .o-text-h1 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
-  font-size: 48px;
+  font-family: "Urbanist", serif;
+  font-optical-sizing: auto;
   font-style: normal;
   font-weight: 900;
   line-height: 1.3;
@@ -333,7 +330,8 @@ font-face {
 .o-text-h2 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  font-family: "Urbanist", serif;
+  font-optical-sizing: auto;
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
@@ -344,11 +342,10 @@ font-face {
   .o-text-h1 {
     color: #FFF;
     text-align: center;
-    font-family: Mont;
     font-size: 56px;
     font-style: normal;
     font-weight: 900;
-    line-height: 1.3;
+    line-height: 1;
     text-align: left;
     width: 500px;
   }
@@ -1682,7 +1679,7 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.5;
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
@@ -1694,6 +1691,9 @@ textarea.form-control-lg {
   border-radius: var(--bs-border-radius);
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
+  option{
+    font-weight: 500;
+  }
 }
 
 @media (prefers-reduced-motion: reduce) {
