--- a/sass/main.scss
+++ b/sass/main.scss
@@ -105,7 +105,7 @@ textarea::placeholder{
 }
 
 .nav-item a {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
