--- a/style-2.0.css
+++ b/style-2.0.css
@@ -42,7 +42,7 @@ span {
 }
 
 font-face {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   src: url("../settings/Mont-Black.ttf") format("truetype");
   src: url("../settings/Mont-Bold.ttf") format("truetype");
   src: url("../settings/Mont-Heavy.ttf") format("truetype");
@@ -126,7 +126,7 @@ p {
 }
 
 .nav-item a {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -322,7 +322,7 @@ p {
 .c-footer__enlaces li a {
   color: #5c5776;
   text-align: center;
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -349,7 +349,7 @@ p {
 .enlace-lucas span a {
   color: #5c5776;
   text-align: center;
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -528,7 +528,7 @@ textarea::placeholder {
 }
 
 .nav-item a {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
