--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ span {
 }
 
 font-face {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   src: url("../font/Mont-Black.ttf") format("truetype");
   src: url("../font/Mont-Bold.ttf") format("truetype");
   src: url("../font/Mont-Heavy.ttf") format("truetype");
@@ -113,7 +113,7 @@ p {
 }
 
 .nav-item a {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -310,7 +310,7 @@ p {
 .c-footer__enlaces li a {
   color: #5c5776;
   text-align: center;
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -337,7 +337,7 @@ p {
 .enlace-lucas span a {
   color: #5c5776;
   text-align: center;
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -463,7 +463,7 @@ span {
 }
 
 font-face {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   src: url("../settings/Mont-Black.ttf") format("truetype");
   src: url("../settings/Mont-Bold.ttf") format("truetype");
   src: url("../settings/Mont-Heavy.ttf") format("truetype");
@@ -525,7 +525,7 @@ font-face {
 }
 
 .nav-item a {
-  font-family: "Mont";
+  font-family: "Urbanist", serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
