font mont replace 2

--- a/sass/04.components/_main.scss
+++ b/sass/04.components/_main.scss
@@ -34,7 +34,7 @@
                 span{
                     text-align: left;
                     color: #5C5776;
-                    font-family: Mont;
+                    font-family: "Urbanist", serif;
                     font-size: 15px;
                     font-style: normal;
                     font-weight: 500;
@@ -60,7 +60,7 @@
            
            button{
             color: #6B6B6B;
-            font-family: Mont;
+            font-family: "Urbanist", serif;
             font-size: 20px;
             font-style: normal;
             font-weight: 900;
