--- a/sass/02.tools/_mixins.scss
+++ b/sass/02.tools/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin h1header($font-size, $line-height) {
     color: #FFF;
     text-align: center;
-    font-family: Mont;
+    font-family: "Urbanist", serif;
     font-size: $font-size;
     font-style: normal;
     font-weight: 900;
@@ -11,7 +11,7 @@
 @mixin h2($font-size) {
     color: #8C989C;
     text-align: center;
-    font-family: Mont;
+    font-family: "Urbanist", serif;
     font-size: $font-size;
     font-style: normal;
     font-weight: 900;
@@ -22,7 +22,7 @@
 @mixin p($font-size){
     color: #5C5776;
     text-align: center;
-    font-family: Mont;
+    font-family: "Urbanist", serif;
     font-size: $font-size;
     font-style: normal;
     font-weight: 700;
