--- a/sass/main.scss
+++ b/sass/main.scss
@@ -206,7 +206,7 @@ textarea::placeholder{
 .c-main .c-main__beneficios h1 {
   color: $color--violet;
   text-align: center;
-  font-family: Mont;
+  font-family: "Urbanist", serif;
   font-size: 40;
   font-style: normal;
   font-weight: 900;
@@ -217,7 +217,7 @@ textarea::placeholder{
 .c-main .c-main__beneficios p {
   color: #5C5776;
   text-align: center;
-  font-family: Mont;
+  font-family: "Urbanist", serif;
   font-size: 20;
   font-style: normal;
   font-weight: 700;
@@ -244,7 +244,7 @@ textarea::placeholder{
 .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
   text-align: left;
   color: #5C5776;
-  font-family: Mont;
+  font-family: "Urbanist", serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -262,7 +262,7 @@ textarea::placeholder{
 .c-main .c-main__clinicas h1 {
   color: $color--violet;
   text-align: center;
-  font-family: Mont;
+  font-family: "Urbanist", serif;
   font-size: 40;
   font-style: normal;
   font-weight: 900;
@@ -272,7 +272,7 @@ textarea::placeholder{
 
 .c-main .c-main__clinicas .accordion-header button {
   color: #6B6B6B;
-  font-family: Mont;
+  font-family: "Urbanist", serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 900;
