--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ font-face {
 p {
   color: #5C5776;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
@@ -191,7 +191,7 @@ p {
 .c-main .c-main__beneficios h1 {
   color: #8C989C;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 40;
   font-style: normal;
   font-weight: 900;
@@ -201,7 +201,7 @@ p {
 .c-main .c-main__beneficios p {
   color: #5C5776;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 20;
   font-style: normal;
   font-weight: 700;
@@ -224,7 +224,7 @@ p {
 .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
   text-align: left;
   color: #5C5776;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -240,7 +240,7 @@ p {
 .c-main .c-main__clinicas h1 {
   color: #8C989C;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 40;
   font-style: normal;
   font-weight: 900;
@@ -249,7 +249,7 @@ p {
 }
 .c-main .c-main__clinicas .accordion-header button {
   color: #6B6B6B;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 20px;
   font-style: normal;
   font-weight: 900;
@@ -366,7 +366,7 @@ p {
 .o-text-h1 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 48px;
   font-style: normal;
   font-weight: 900;
@@ -377,7 +377,7 @@ p {
 .o-text-h2 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
@@ -392,7 +392,7 @@ p {
   height: 48px;
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -403,7 +403,7 @@ p {
   .o-text-h1 {
     color: #FFF;
     text-align: center;
-    font-family: Mont;
+    "Urbanist", serif
     font-size: 56px;
     font-style: normal;
     font-weight: 900;
@@ -607,7 +607,7 @@ font-face {
 .c-main .c-main__beneficios h1 {
   color: #8C989C;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 40;
   font-style: normal;
   font-weight: 900;
@@ -618,7 +618,7 @@ font-face {
 .c-main .c-main__beneficios p {
   color: #5C5776;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 20;
   font-style: normal;
   font-weight: 700;
@@ -645,7 +645,7 @@ font-face {
 .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
   text-align: left;
   color: #5C5776;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -663,7 +663,7 @@ font-face {
 .c-main .c-main__clinicas h1 {
   color: #8C989C;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 40;
   font-style: normal;
   font-weight: 900;
@@ -673,7 +673,7 @@ font-face {
 
 .c-main .c-main__clinicas .accordion-header button {
   color: #6B6B6B;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 20px;
   font-style: normal;
   font-weight: 900;
@@ -720,7 +720,7 @@ font-face {
 .o-text-h1 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 48px;
   font-style: normal;
   font-weight: 900;
@@ -731,7 +731,7 @@ font-face {
 .o-text-h2 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  "Urbanist", serif
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
@@ -742,7 +742,7 @@ font-face {
   .o-text-h1 {
     color: #FFF;
     text-align: center;
-    font-family: Mont;
+    "Urbanist", serif
     font-size: 56px;
     font-style: normal;
     font-weight: 900;
